# cystoscopy-video-dataset

./: CITATION.cff  LICENSE  README.md  README_ru.md  generate_video.py  pyproject.toml  utils.py
