[project]
name = "cystoscopy-video-dataset"
version = "0.1.0"
description = ""
authors = [
    {name = "Lekarev Vladimir",email = "lekarev_v_yu@staff.sechenov.ru"},
    {name = "Chernenkiy Ivan",email = "chernenkiy_i_m@staff.sechenov.ru"},
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
cffconvert = "^2.0.0"

